--- a/me3.html
+++ b/me3.html
@@ -118,7 +118,7 @@
       </video>
     </main>
     <footer>
-        <p>&copy; 2024 Science-e-Connector. All rights reserved.</p>
+        <p>&copy; 2024 Englsih-e-Connector. All rights reserved.</p>
 <pre id=>Contact Us:
 
 microsoftrishik@gmail.com
