--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@ input[type="text"]:focus {
                         <input type="text" id="q8" required>
                     </div>
                     <div class="question">
-                        <label for="q9">A9. All birds have wings. A sparrow is a bird. Does a sparrow have wings?</label>
+                        <label for="q9">Q9. All birds have wings. A sparrow is a bird. Does a sparrow have wings?</label>
                         <input type="text" id="q9" required>
                  
 
