--- a/dem3easy.html
+++ b/dem3easy.html
@@ -730,7 +730,7 @@
 
                 <!-- Add a canvas for the chart -->
                 <canvas id="myChart"></canvas>
-                <button onclick="showGraph()">Show Bar Graph</button>
+                <button id="mybutton" onclick="showGraph()">Show Bar Graph</button>
             </center>
         </div> </div>
         
