--- a/dem.html
+++ b/dem.html
@@ -717,7 +717,20 @@
             <div class="bigOverlay" id="ansOverlay">
             </div>
         </div>
-        
+        <div class="container"> <div id="popup">
+            <center><h2><b>Your analysis.</b></h2>
+                <h5>Scroll Down for better Visibility!!</h5> 
+                <p id="res"></p> 
+                <p id="res2"></p>'
+                <p id="res3"></p>
+            
+
+                <!-- Add a canvas for the chart -->
+                <canvas id="myChart"></canvas>
+                <button id="mybutton" onclick="showGraph()">Show Bar Graph</button>
+            </center>
+        </div> </div>
     </body>
     <script src="script.js" type="text/javascript"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </html>
