--- a/dem1easy.html
+++ b/dem1easy.html
@@ -66,7 +66,7 @@
                 <a href="#">
                     <div class="nav-item">
                        
-<a href="me2.html" target='_blank'>
+<a href="me.html" target='_blank'>
 	<button id="b1" >Guidelines and rules</button></a>
                     </div>
                     <div class="nav-item">
