--- a/dem2.html
+++ b/dem2.html
@@ -6,7 +6,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Home Page</title>
-        <link rel="stylesheet" href="style1.css">
+        <link rel="stylesheet" href="style.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link
@@ -69,6 +69,9 @@
 	<button id="b1" >Guidelines and rules</button></a>
                     </div>
                 </a>
+                <a href="index copy.html" >
+                    <button id="b1" >Back</button></a>
+                                    
                 <a href="#">
                     <div class="nav-item">
                         <i class="fa-solid fa-circle-user"></i>
