--- a/dem1easy.html
+++ b/dem1easy.html
@@ -60,7 +60,7 @@
         </div>
         <div class="nav">
             <div class="name">
-                Math-e-Connector
+                Math-e-Connector||Bit-Driven
             </div>
             <div class="items">
                 <a href="#">
