--- a/dem2.html
+++ b/dem2.html
@@ -59,7 +59,7 @@
         </div>
         <div class="nav">
             <div class="name">
-                Science-e-connector
+                Science-e-connector||Bit-Driven
             </div>
             <div class="items">
                 <a href="#">
