--- a/dem3easy.html
+++ b/dem3easy.html
@@ -61,7 +61,7 @@
         </div>
         <div class="nav">
             <div class="name">
-                English-e-Connector
+                English-e-Connector||Bit-Driven
             </div>
             <div class="items">
                 <a href="#">
