--- a/dem.html
+++ b/dem.html
@@ -60,7 +60,7 @@
         </div>
         <div class="nav">
             <div class="name">
-                Math-e-connector
+                Math-e-connector||Bit-Driven
             </div>
             <div class="items">
                 <a href="#">
