--- a/dem3.html
+++ b/dem3.html
@@ -60,7 +60,7 @@
         </div>
         <div class="nav">
             <div class="name">
-                English-e-Connector
+                English-e-Connector||Bit-Driven
             </div>
             <div class="items">
                 <a href="#">
