--- a/i.html
+++ b/i.html
@@ -85,6 +85,7 @@
 
     <div class="content">
         <h1>BIT-DRIVEN</h1>
+        <h5>Click on the given buttons to play the games-:</h5>
         <div class="game-buttons">
             <a href="dem.html" class="btn">Math-e-Connector</a>
             <a href="dem2.html" class="btn ">Science-e-Connector</a>
