--- a/index copy.html
+++ b/index copy.html
@@ -85,7 +85,7 @@
 
     <div class="content">
         <h1>BIT-DRIVEN</h1>
-        <h5>Click on the given buttons to play the games</h5>
+        <h5>Click on the given buttons to play the games:-</h5>
         <div class="game-buttons">
             <a href="dem1easy.html" class="btn">Math-e-Connector</a>
             <a href="dem2easy.html" class="btn ">Science-e-Connector</a>
