--- a/form.html
+++ b/form.html
@@ -305,12 +305,12 @@ font-size: 30px;
             document.getElementById("res").textContent = "You scored " + score;
           if (score<=4){
 
-            document.getElementById("res2").innerHTML="You scored equal or less than 4.So now further you will get some easy questions .Click on the Next Button to get our games.. "
+            document.getElementById("res2").innerHTML="You scored equal or less than 4. No worries! Now you will get easy questions which help you enhance knowledge. Click on the Next button to get our games.. "
           }
           else{
 
             
-            document.getElementById("res2").textContent="You scored more than 4.So now further you will get difficult questions .Click on the Next Button to get our games.."
+            document.getElementById("res2").textContent=" Hurray!! You scored more than 4. Now you will get hard questions to test your knowledge. Click on the Next Button to get our games.."
           }
           
         }
