--- a/form.html
+++ b/form.html
@@ -305,7 +305,7 @@ font-size: 30px;
             document.getElementById("res").textContent = "You scored " + score;
           if (score<=4){
 
-            document.getElementById("res2").innerHTML="You scored equal or less than 4. No worries! Now you will get easy questions which help you enhance knowledge. Click on the Next button to get our games.. "
+            document.getElementById("res2").innerHTML="You scored equal or less than 4. No worries! Now you will get easy questions which will help you enhance your knowledge. Click on the Next button to get our games.. "
           }
           else{
 
