--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
 
     <!-- Main Content -->
     <div class="content">
-        <h2>Our Mission: Empowering Slow Learners</h2>
+        <h2>Learn every Bit by Bit..</h2>
         <p>
             We believe in the power of individualized learning techniques to help slow learners. Our platform offers 
             interactive learning methods designed to assist those who need extra guidance. From personalized lessons 
