--- a/index.html
+++ b/index.html
@@ -85,6 +85,9 @@
         .content p:hover {
             color: #ff5757;
         }
+        #new:hover {
+            color: #57dbff;
+        }
         
         .signup {
             text-align: center; /* Center the button container */
@@ -205,7 +208,7 @@
         <p>
             We believe in the power of individualized learning techniques to help slow learners. Our platform offers interactive learning methods designed to assist those who need extra guidance. From personalized lessons to engaging activities, we focus on making learning fun and effective for everyone.
         </p>
-        <p>
+        <p id="new">
             Join us as we bridge the gap for slow learners with innovative and supportive teaching strategies.
         </p>
     </div>
